first pass at centralizing sentry logging