@@ -1,17 +1,16 @@
 package org.broadinstitute.consent.http.resources;
 
-import java.util.Objects;
-
 import com.google.gson.Gson;
 import com.google.gson.stream.MalformedJsonException;
 import org.apache.commons.io.IOUtils;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
 import org.broadinstitute.consent.http.exceptions.ConsentConflictException;
+import org.broadinstitute.consent.http.exceptions.UnknownIdentifierException;
 import org.broadinstitute.consent.http.exceptions.UpdateConsentException;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.dto.Error;
-import org.broadinstitute.consent.http.exceptions.UnknownIdentifierException;
 import org.broadinstitute.consent.http.service.users.handler.UserRoleHandlerException;
+import org.broadinstitute.consent.http.util.ConsentLogger;
 import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 import org.jdbi.v3.core.statement.UnableToExecuteStatementException;
 import org.owasp.fileio.FileValidator;
@@ -35,7 +34,7 @@ import java.util.AbstractMap;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 
 /**
@@ -43,7 +42,7 @@ import java.util.stream.Collectors;
  * <p/>
  * Abstract superclass for all Resources.
  */
-abstract public class Resource {
+abstract public class Resource implements ConsentLogger {
 
     // Resource based role names
     public final static String ADMIN = "Admin";
@@ -67,16 +66,16 @@ abstract public class Resource {
 
     protected Response createExceptionResponse(Exception e) {
         try {
-            logger().warn("Returning error response to client: " + e.getMessage());
+            logWarn("Returning error response to client: " + e.getMessage());
             ExceptionHandler handler = dispatch.get(e.getClass());
             if (handler != null) {
                 return handler.handle(e);
             } else {
-                logger().error(e.getMessage());
+                logException(e);
                 return Response.serverError().type(MediaType.APPLICATION_JSON).entity(new Error(e.getMessage(), Response.Status.INTERNAL_SERVER_ERROR.getStatusCode())).build();
             }
         } catch (Throwable t) {
-            logger().error(t.getMessage());
+            logException(t);
             return Response.serverError().type(MediaType.APPLICATION_JSON).entity(new Error(e.getMessage(), Response.Status.INTERNAL_SERVER_ERROR.getStatusCode())).build();
         }
     }
@@ -86,7 +85,7 @@ abstract public class Resource {
             try {
                 output.write(IOUtils.toByteArray(inputStream));
             } catch (Exception e) {
-                logger().error(e.getMessage());
+                logException(e);
                 throw e;
             }
         };
@@ -193,8 +192,7 @@ abstract public class Resource {
      */
     void validateAuthedRoleUser(final List<UserRoles> privilegedRoles, final User authedUser, final Integer userId) {
         List<Integer> authedRoleIds = privilegedRoles.stream().
-                map(UserRoles::getRoleId).
-                collect(Collectors.toList());
+                map(UserRoles::getRoleId).toList();
         boolean authedUserHasRole = authedUser.getRoles().stream().
                 anyMatch(userRole -> authedRoleIds.contains(userRole.getRoleId()));
         if (!authedUserHasRole && !authedUser.getUserId().equals(userId)) {
